[package]
name = "webhook-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.19.2", features = ["full"]}
clap = {version = "3.2.5", features = ["derive", "env"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "ansi", "json"]}
tower-http = {version = "0.3.4", features = ["trace"]}
