[package]
name = "webhook-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.7", features = ["headers"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.19.2", features = ["full"]}
clap = {version = "3.2.5", features = ["derive", "env"]}
tracing = "0.1.35"
tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "ansi", "json"]}
tower = "0.4.13"
tower-http = {version = "0.3.4", features = ["trace", "map-request-body"]}
thiserror = {version = "1.0.31"}
tempdir = "0.3.7"
headers = "0.3.7"
hmac = "0.12.1"
sha2 = "0.10.2"
hyper = "0.14.19"
hex = "0.4.3"
http = "0.2.8"
crypto-common = "0.1.3"
