[package]
name = "webhook-runner-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = {version = "3.2.5", features = ["derive", "env"]}
#serde = {version = "1.0.137", features = ["derive"]}
#serde_json = "1.0.81"
#axum = {version = "0.5.7", features = ["headers"]}
#axum-macros = "0.2.3"
#headers = "0.3.7"
#http = "0.2.8"
#hyper = "0.14.19"
tokio = {version = "1.19.2", features = ["full"]}
#tower = "0.4.13"
#tower-http = {version = "0.3.4", features = ["trace", "map-request-body"]}
tempdir = "0.3.7"
thiserror = {version = "1.0.31"}
tracing = "0.1.35"
#tracing-subscriber = {version = "0.3.11", features = ["env-filter", "fmt", "ansi", "json"]}
#crypto-common = "0.1.3"
#digest = "0.10.3"
#hex = "0.4.3"
#hmac = "0.12.1"
#sha2 = "0.10.2"
git2 = "0.14.4"
